# peppol-python

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/eleata_peppol/: __init__.py  client.py
tests/: test_client.py
