[project]
name = "eleata-peppol"
version = "0.1.0"
description = "Python SDK for the eleata Peppol API — validate EU invoices in 5 lines."
authors = [{name = "eleata", email = "hello@eleata.io"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]
keywords = ["peppol", "xrechnung", "factur-x", "ubl", "einvoice", "validation", "eu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://peppol.eleata.io"
Repository = "https://github.com/eleata/peppol-python"
Issues = "https://github.com/eleata/peppol-python/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pytest-httpx>=0.34", "mypy>=1.13"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
